add some template changes

--- a/bookmark/src/main/resources/application.properties
+++ b/bookmark/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=bookmark
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/mldb?allowPublicKeyRetrieval=true&useSSL=false
+# Localhost
+#spring.datasource.url=jdbc:mysql://localhost:3306/mldb?allowPublicKeyRetrieval=true&useSSL=false
+# Docker
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/mldb?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
