--- a/template.yaml
+++ b/template.yaml
@@ -5,7 +5,7 @@ Parameters:
   DBName:
     Type: String
     Description: Name of the MySQL database
-    Default: ml-db
+    Default: mldb
   DBUsername:
     Type: String
     Description: Username for accessing the MySQL database
@@ -14,7 +14,7 @@ Parameters:
     Type: String
     Description: Password for accessing the MySQL database
     NoEcho: true
-    Default: admin
+    Default: unGr4nP4ssw0rd!
   SpringBootBookmarkImage:
     Type: String
     Description: Docker image URI for the Spring Boot
@@ -33,113 +33,79 @@ Parameters:
     Default: 8081
 
 Resources:
-  MlVPC:
-    Type: AWS::EC2::VPC
+  VPC:
+    Type: 'AWS::EC2::VPC'
     Properties:
-      CidrBlock: "10.0.0.0/16"
-      Tags:
-        - Key: Name
-          Value: ml-vpc
+      CidrBlock: '10.0.0.0/16'
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
 
-  ApiSubnet:
-    Type: AWS::EC2::Subnet
+  Subnet1:
+    Type: 'AWS::EC2::Subnet'
     Properties:
-      VpcId: !Ref MlVPC
-      CidrBlock: "10.0.1.0/24"
-      AvailabilityZone: "us-east-1a" # Change this to your desired availability zone
-      Tags:
-        - Key: Name
-          Value: api-subnet
+      VpcId: !Ref VPC
+      CidrBlock: '10.0.0.0/24'
+      AvailabilityZone: 'us-east-1a'
 
-  LoadBalancerSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
+  Subnet2:
+    Type: 'AWS::EC2::Subnet'
     Properties:
-      GroupDescription: Security group for the SpringBootAPILoadBalancer
-      VpcId: !Ref MlVPC
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 80  # Assuming HTTP traffic
-          ToPort: 80
-          CidrIp: 0.0.0.0/0  # Allowing access from anywhere (Update as per your requirements)
-      SecurityGroupEgress:
-        - IpProtocol: "-1"  # Allow all outbound traffic
-          CidrIp: 0.0.0.0/0
+      VpcId: !Ref VPC
+      CidrBlock: '10.0.1.0/24'
+      AvailabilityZone: 'us-east-1b'
 
-  LoadBalancerBookmark:
-    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+  InternetGateway:
+    Type: 'AWS::EC2::InternetGateway'
+
+  AttachGateway:
+    Type: 'AWS::EC2::VPCGatewayAttachment'
     Properties:
-      Name: SpringBootAPILoadBalancer
-      Scheme: internet-facing
-      Subnets: !Ref ApiSubnet
+      VpcId: !Ref VPC
+      InternetGatewayId: !Ref InternetGateway
+
+  RouteTable:
+    Type: 'AWS::EC2::RouteTable'
+    Properties:
+      VpcId: !Ref VPC
+
+  Subnet1RouteTableAssociation:
+    Type: 'AWS::EC2::SubnetRouteTableAssociation'
+    Properties:
+      SubnetId: !Ref Subnet1
+      RouteTableId: !Ref RouteTable
+
+  Subnet2RouteTableAssociation:
+    Type: 'AWS::EC2::SubnetRouteTableAssociation'
+    Properties:
+      SubnetId: !Ref Subnet2
+      RouteTableId: !Ref RouteTable
+
+  SecurityGroup:
+    Type: 'AWS::EC2::SecurityGroup'
+    Properties:
+      GroupDescription: 'Security group for Fargate service'
+      VpcId: !Ref VPC
+
+  LoadBalancer:
+    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
+    Properties:
+      Name: MyLoadBalancer
+      Subnets:
+        - !Ref Subnet1
+        - !Ref Subnet2
       SecurityGroups:
-        - !GetAtt LoadBalancerSecurityGroup.GroupId
-      Tags:
-        - Key: Name
-          Value: SpringBootAPILoadBalancer
-
-  LoadBalancerCoupon:
-    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
-    Properties:
-      Name: SpringBootAPILoadBalancer
+        - !Ref SecurityGroup
       Scheme: internet-facing
-      Subnets: !Ref ApiSubnet
-      SecurityGroups:
-        - !GetAtt LoadBalancerSecurityGroup.GroupId
-      Tags:
-        - Key: Name
-          Value: SpringBootAPILoadBalancer
+      Type: application
 
-  TargetGroupBookmark:
-    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+  TargetGroup:
+    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
     Properties:
-      Name: SpringBootAPITargetGroup
-      Port: !Ref SpringBootBookmarkPort
-      Protocol: HTTP
-      TargetType: ip
-      VpcId: !Ref MlVPC
-      TargetGroupAttributes:
-        - Key: deregistration_delay.timeout_seconds
-          Value: '30'
-        - Key: stickiness.enabled
-          Value: 'false'
-        - Key: load_balancing.algorithm.type
-          Value: least_outstanding_requests  # Setting the load balancing algorithm to least_outstanding_requests
-
-  TargetGroupCoupon:
-    Type: AWS::ElasticLoadBalancingV2::TargetGroup
-    Properties:
-      Name: SpringBootAPITargetGroup
-      Port: !Ref SpringBootCouponPort
-      Protocol: HTTP
-      TargetType: ip
-      VpcId: !Ref MlVPC
-      TargetGroupAttributes:
-        - Key: deregistration_delay.timeout_seconds
-          Value: '30'
-        - Key: stickiness.enabled
-          Value: 'false'
-        - Key: load_balancing.algorithm.type
-          Value: least_outstanding_requests  # Setting the load balancing algorithm to least_outstanding_requests
-
-  ListenerBookmark:
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    Properties:
-      DefaultActions:
-        - Type: forward
-          TargetGroupArn: !Ref TargetGroupBookmark
-      LoadBalancerArn: !Ref LoadBalancerBookmark
+      Name: MyTargetGroup
       Port: 80
       Protocol: HTTP
-
-  ListenerCoupon:
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    Properties:
-      DefaultActions:
-        - Type: forward
-          TargetGroupArn: !Ref TargetGroupCoupon
-      LoadBalancerArn: !Ref LoadBalancerCoupon
-      Port: 80
-      Protocol: HTTP
+      TargetType: ip
+      VpcId: !Ref VPC
 
   TaskExecutionRole:
     Type: AWS::IAM::Role
@@ -173,72 +139,45 @@ Resources:
                   - ecs:DeregisterTaskDefinition
                 Resource: "*"
 
-  BookmarkTaskDefinition:
-    Type: AWS::ECS::TaskDefinition
+  FargateTaskDefinition:
+    Type: 'AWS::ECS::TaskDefinition'
     Properties:
-      Family: springboot-api-task
-      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
+      RequiresCompatibilities:
+        - FARGATE
+      Cpu: '256'
+      Memory: '512'
       NetworkMode: awsvpc
-      ContainerDefinitions:
-        - Name: springboot-container
-          Image: !Ref SpringBootBookmarkImage
-          PortMappings:
-            - ContainerPort: !Ref SpringBootBookmarkPort
-
-  CouponTaskDefinition:
-    Type: AWS::ECS::TaskDefinition
-    Properties:
-      Family: springboot-api-task
       ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
-      NetworkMode: awsvpc
       ContainerDefinitions:
-        - Name: springboot-container
+        - Name: coupon-api
           Image: !Ref SpringBootCouponImage
           PortMappings:
             - ContainerPort: !Ref SpringBootCouponPort
 
-  ECSExecutionRole:
-    Type: AWS::IAM::Role
+  FargateService:
+    Type: 'AWS::ECS::Service'
     Properties:
-      AssumeRolePolicyDocument:
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: ecs-tasks.amazonaws.com
-            Action: sts:AssumeRole
-      Policies:
-        - PolicyName: ECSExecutionPolicy
-          PolicyDocument:
-            Statement:
-              - Effect: Allow
-                Action:
-                  - logs:CreateLogStream
-                  - logs:PutLogEvents
-                Resource: arn:aws:logs:*:*:*
-
-  ECSFargatePolicy:
-    Type: AWS::IAM::Policy
-    Properties:
-      PolicyName: ECSFargatePolicy
-      PolicyDocument:
-        Statement:
-          - Effect: Allow
-            Action:
-              - ecs:RunTask
-              - ecs:StopTask
-              - ecs:DescribeTasks
-              - ecs:ListTasks
-              - ecs:UpdateService
-              - ecs:RegisterTaskDefinition
-              - ecs:DeregisterTaskDefinition
-            Resource: "*"
-      Roles:
-        - Ref: ECSExecutionRole
+      Cluster: default
+      LaunchType: FARGATE
+      DesiredCount: 2
+      TaskDefinition: !Ref FargateTaskDefinition
+      NetworkConfiguration:
+        AwsvpcConfiguration:
+          Subnets:
+            - !Ref Subnet1
+            - !Ref Subnet2
+          SecurityGroups:
+            - !Ref SecurityGroup
+      LoadBalancers:
+        - ContainerName: coupon-container
+          ContainerPort: 80
+          TargetGroupArn: !Ref TargetGroup
 
   AuroraDB:
     Type: AWS::RDS::DBCluster
     Properties:
-      Engine: aurora
+      Engine: aurora-mysql
+      EngineVersion: 5.7.mysql_aurora.2.07.1
       EngineMode: serverless
       MasterUsername: !Ref DBUsername
       MasterUserPassword: !Ref DBPassword
@@ -248,25 +187,9 @@ Resources:
         MinCapacity: 1
         MaxCapacity: 2
         SecondsUntilAutoPause: 300
-      VpcSecurityGroupIds:
-        - !GetAtt DatabaseSecurityGroup.GroupId
       EnableHttpEndpoint: true
 
-  DatabaseSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security group for RDS database
-      VpcId: !Ref MlVPC
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 3306
-          ToPort: 3306
-          CidrIp: 0.0.0.0/0
-
 Outputs:
-  SpringBootBookmarkAPIEndpoint:
-    Description: Endpoint URL for accessing the Spring Boot API
-    Value: !Sub "http://${LoadBalancerBookmark.DNSName}:${SpringBootBookmarkPort}"
   SpringBootCouponAPIEndpoint:
     Description: Endpoint URL for accessing the Spring Boot API
-    Value: !Sub "http://${LoadBalancerCoupon.DNSName}:${SpringBootCouponPort}"
+    Value: !Sub "http://${LoadBalancer.DNSName}:${SpringBootCouponPort}"
