--- a/bookmark/src/main/resources/application.properties
+++ b/bookmark/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=bookmark
 server.port=8080
 # Localhost
-#spring.datasource.url=jdbc:mysql://localhost:3306/mldb?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/mldb?allowPublicKeyRetrieval=true&useSSL=false
 # Docker
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/mldb?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/mldb?allowPublicKeyRetrieval=true&useSSL=false
+# Aurora
+#spring.datasource.url=jdbc:mysql://mercado-libre-aurora-cluster.cluster-c7wgqqm20dhu.us-east-1.rds.amazonaws.com/mldb
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
