--- a/bookmark/src/main/resources/application.properties
+++ b/bookmark/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mldb?allowPublicKeyRetrieval=t
 # Docker
 #spring.datasource.url=jdbc:mysql://host.docker.internal:3306/mldb?allowPublicKeyRetrieval=true&useSSL=false
 # Aurora
-#spring.datasource.url=jdbc:mysql://mercado-libre-aurora-cluster.cluster-c7wgqqm20dhu.us-east-1.rds.amazonaws.com/mldb
+#spring.datasource.url=jdbc:mysql://mercadolibre-database.cluster-c7wgqqm20dhu.us-east-1.rds.amazonaws.com/mldb
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.password=admin1234
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
